--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "type": "git",
     "url": "https://github.com/puretype/puretype-vscode"
   },
+  "icon": "images/logo.png",
+  "galleryBanner": {
+    "color": "#042F1C",
+    "theme": "light"
+  },
   "categories": [
     "Other"
   ],
