--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "puretype",
-  "displayName": "puretype",
+  "displayName": "PureType",
   "description": "Intelligent functional assistant",
   "version": "0.0.1",
   "engines": {
