--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "puretype",
   "displayName": "PureType",
   "description": "Intelligent functional assistant",
+  "publisher": "puretype",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.86.0"
