onLanguage:elixir activation event

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onLanguage:elixir"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
