--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
     "root": true,
     "parser": "@typescript-eslint/parser",
+    "extends": [
+      "prettier",
+      "plugin:prettier/recommended"
+    ],
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module"
