additional package script

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
+    "lint:fix": "eslint src --ext ts --fix",
     "test": "vscode-test"
   },
   "devDependencies": {
