--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@apollo/client": "3.9.7",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
     "@types/vscode": "^1.86.0",
@@ -54,6 +55,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
+    "graphql": "16.8.1",
     "prettier": "3.2.5",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
