--- a/package.json
+++ b/package.json
@@ -41,10 +41,14 @@
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "lint:fix": "eslint src --ext ts --fix",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "devDependencies": {
     "@apollo/client": "3.9.7",
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/typescript": "4.0.6",
+    "@graphql-codegen/typescript-resolvers": "4.0.6",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
     "@types/vscode": "^1.86.0",
