--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "graphql": "16.8.1",
+    "js-sha256": "0.11.0",
     "prettier": "3.2.5",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
