--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@apollo/client": "3.9.7",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/typescript": "4.0.6",
+    "@graphql-codegen/typescript-graphql-files-modules": "3.0.0",
     "@graphql-codegen/typescript-resolvers": "4.0.6",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
