--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "engines": {
     "vscode": "^1.86.0"
   },
+  "bugs": {
+    "url": "https://github.com/puretype/puretype-vscode/issues",
+    "email": "support@puretype.ai"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/puretype/puretype-vscode"
