--- a/package.json
+++ b/package.json
@@ -27,6 +27,14 @@
   "activationEvents": [
     "onLanguage:elixir"
   ],
+  "contributes": {
+    "commands": [
+      {
+        "command": "puretype.logout",
+        "title": "PureType logout"
+      }
+    ]
+  },
   "main": "./dist/extension.js",
   "scripts": {
     "vscode:prepublish": "npm run package",
