--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "graphql": "16.8.1",
+    "graphql-ws": "5.16.0",
     "js-sha256": "0.11.0",
     "prettier": "3.2.5",
     "ts-loader": "^9.5.1",
