--- a/package.json
+++ b/package.json
@@ -77,5 +77,9 @@
     "typescript": "^5.3.3",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@sentry/core": "8.25.0",
+    "@sentry/node": "8.25.0"
   }
 }
